crates/review-buddy/tests/snapshots/drafts__restored_status_100x30_dusk.snap
---
source: crates/review-buddy/tests/drafts.rs
expression: text(& render(& mut a))
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
╭ files 3 ───────────────────────╮╭ src/ui/menus.rs ───────────────────────────────────────────────╮
│› · src/ui/menus.rs       +22 −1││              @@ -10,7 +10,9 @@ use crate::app::Action;         │
│  · src/ui/menubar.rs      +8 −0││›   10   10                                                     │
│  · src/ui/mod.rs          +2 −0││              ╭─ pending comment · line 10 ────────────────────╮│
│                                ││              │ This could return early.                       ││
│                                ││              ╰────────────────────────────────────────────────╯│
│                                ││    11   11   pub struct Menu {                                 │
│                                ││    12   12       items: Vec<MenuItem>,                         │
│                                ││         13 +     selected: usize,                              │
│                                ││         14 +     open: bool,                                   │
│                                ││    13   15   }                                                 │
│                                ││    14   16                                                     │
│                                ││    15   17   impl Menu {                                       │
│                                ││    16   18       pub fn new(items: Vec<MenuItem>) -> Self {    │
│                                ││              @@ -34,6 +36,24 @@ impl Menu {                    │
│                                ││    34   36       pub fn len(&self) -> usize {                  │
│                                ││    35   37           self.items.len()                          │
│                                ││    36   38       }                                             │
│                                ││         39 +                                                   │
│ Your review · pending ─────────││         40 +     pub fn select_next(&mut self) {               │
│1 suggestion · 1 comment        ││         41 +         if self.items.is_empty() {                │
│0 of 3 files viewed             ││         42 +             return;                               │
│Your review: not started        ││         43 +         }                                         │
│  menus.rs:51 Fewer branches th…││         44 +         self.selected = (self.selected + 1) % sel…│
│  menus.rs:10 This could return…││              ╭─ thread · line 44 ─────────────────────────────╮│
│a approve · c comment           ││              │ jo · 1d                                        ││
│x request changes · R review    ││              │ Should this wrap round to the first item? Most ││
╰────────────────────────────────╯╰ hunk 1 of 3 · file 1 of 3 ─────────────────────────────────────╯
 j/k move  n/p hunk  ← → file  tab pane  c comment  a approve         · Draft restored · 2 comments
